1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (string): New function.

1998-10-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el (char-list-to-string): New function.

	* poe-xemacs.el, poe-19.el: Abolish macro `char-list-to-string'.

	* poe-18.el: Abolish function `char-list-to-string'.

1998-10-18  Tanaka Akira  <morioka@jaist.ac.jp>

	* broken.el (check-broken-facility): Also use compile time
	description.


1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.4 was released.

1998-10-17  Tanaka Akira  <morioka@jaist.ac.jp>

	* broken.el (check-broken-facility): New macro.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (define-obsolete-function-alias): New function.


1998-10-12  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.3 was released.

1998-10-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Add explanations about
	`LISPDIR', `VERSION_SPECIFIC_LISPDIR' and `what-where'.

	* Makefile (what-where): New target.
	(install): Add new arg `VERSION_SPECIFIC_LISPDIR'.

	* APEL-MK (what-where-apel): New function.
 	(config-apel): Refer to `VERSION_SPECIFIC_LISPDIR'.

	* APEL-CFG (VERSION_SPECIFIC_LISPDIR): New variable.

1998-10-12  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.en (load-path): Modify for Emacs 20.3.

1998-10-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL-CFG (EMU_PREFIX): Use "emu" for Emacs 20.3 or later.

	* EMU-ELS: Don't install pccl in anything older than XEmacs 21
	with MULE.


1998-10-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.2 was released.

	* poem-xm.el (insert-file-contents-as-binary): New function.

	* poem-20.el (write-region-as-binary): bind
	`jka-compr-compression-info-list' with nil.
	(insert-file-contents-as-binary): Change to alias of
	`insert-file-contents-literally' for Emacs 20.


1998-10-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.1 was released.
