@@ -1,9 +1,9 @@
-;;; poe-19.el --- poe API implementation for Emacs 19.*
+;;; inv-19.el --- invisible feature implementation for Emacs 19 or later
 
 ;; Copyright (C) 1995,1996,1997,1998 Free Software Foundation, Inc.
 
 ;; Author: MORIOKA Tomohiko <morioka@jaist.ac.jp>
-;; Keywords: emulation, compatibility
+;; Keywords: invisible, text-property, region, Emacs 19
 
 ;; This file is part of APEL (A Portable Emacs Library).
 
@@ -24,17 +24,40 @@
 
 ;;; Code:
 
-;;; @ face
-;;;
+(defmacro enable-invisible ())
 
-(defun-maybe find-face (face)
-  (car (memq face (face-list)))
+(defmacro end-of-invisible ())
+
+(defun invisible-region (start end)
+  (if (save-excursion
+	(goto-char (1- end))
+	(eq (following-char) ?\n)
+	)
+      (setq end (1- end))
+    )
+  (put-text-property start end 'invisible t)
   )
+
+(defun visible-region (start end)
+  (put-text-property start end 'invisible nil)
+  )
+
+(defun invisible-p (pos)
+  (get-text-property pos 'invisible)
+  )
+
+(defun next-visible-point (pos)
+  (save-excursion
+    (goto-char (next-single-property-change pos 'invisible))
+    (if (eq (following-char) ?\n)
+	(forward-char)
+      )
+    (point)))
 
 
 ;;; @ end
 ;;;
 
-(provide 'poe-19)
+(provide 'inv-19)
 
-;;; poe-19.el ends here
+;;; inv-19.el ends here
